# LiveCam

./: .gitignore  README.md  build.sh  package.json  pnpm-lock.yaml  setver.mjs  tsconfig.json  vite.config.mjs
.github/workflows/: pkg-build.yml
config/entitlements/: LiveCam.entitlements
src/: App.vue  Camera.vue  SettingBar.vue  hooks.ts  interface.ts  main.ts  router.ts  store.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  nsv.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/config/: ConfigPage.vue
src/home/: Camera.vue  Home.vue  SettingBar.vue
src/locale/: en.ts  index.ts  zh_cn.ts
src/other/: About.vue  Config.vue  Exception.vue  OtherPage.vue
src/other/components/: PageTitle.vue
